kubernetes/apps/production/media/radarr/radarr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: radarr-volume
        persistentVolumeClaim:
          claimName: radarr-volume-pvc
      containers:
      - name: radarr
        image: ghcr.io/k8s-at-home/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: radarr-volume
          mountPath: /config
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: radarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: media.${DOMAIN_NAME}
    http:
      paths:
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
  tls:
  - hosts:
    - media.${DOMAIN_NAME}
